# graph-neighbor-matching

./: .gitignore  Cargo.toml  README.md
benches/: lib.rs  score_graphs.rs
graphs/: collect_distribute_3_3.gml  collect_distribute_3_3a.gml  collect_distribute_3_3b.gml  skorpion_approx44.gml
graphs/ffl/: ffl_iso_1_100.gml  ffl_iso_1_35.gml  ffl_iso_2_100.gml  ffl_iso_2_35.gml  gen_iso_ffl.rb
graphs/neat/: approx.gml  target.gml
src/: benches.rs  graph.rs  graph_traits.rs  lib.rs  node_color_matching.rs  score_norm.rs  similarity_matrix.rs  test_helper.rs  tests.rs  traits.rs
test-helper/: Cargo.toml
test-helper/src/: lib.rs
tests/: lib.rs  tests.rs
tests/common/: mod.rs
tests/graphs/: skorpion.gml
