[package]
name = "graph-neighbor-matching"
version = "0.7.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/graph-neighbor-matching"
description = "Graph similarity score using neighbor matching"
keywords = ["graph", "algorithm", "similarity"]

exclude = ["/target"]
include = ["*.gml", "*.rs", "*.toml", "*.md", "LICENSE"]

[dependencies]
nalgebra = "0.15.3"
munkres = "0.4"
closed01 = "0.4"
petgraph = "0.4"
approx = "0.3.0"

[dev-dependencies]

asexp = "0.3"
graph-io-gml = "0.2"
