[package]
name = "graph-neighbor-matching"
version = "0.8.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/graph-neighbor-matching"
description = "Graph similarity score using neighbor matching"
keywords = ["graph", "algorithm", "similarity"]
include = ["graphs/**/*.gml", "**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
ndarray = "0.12"
munkres = "0.5"
closed01 = "0.5"
petgraph = "0.4"
approx = "0.3"

[dev-dependencies]
asexp = "0.3"
graph-io-gml = "0.2"
criterion = "0.2"

[[bench]]
name = "score_graphs"
harness = false

# This section is required to make "cargo bench -- --save-baseline" work
[lib]
bench = false
